# Orin_PointPillars_Livox

./: .gitignore  README.md
jetson-inference/CUDA-PointPillars/: CMakeLists.txt  main.cpp(폐기하고 다시)
jetson-inference/CUDA-PointPillars/eval/kitti/object/pred_velo/: 000000.txt  000001.txt  000002.txt  000003.txt  000004.txt  000005.txt  000006.txt  000007.txt  000008.txt  000009.txt
jetson-inference/CUDA-PointPillars/src/: pointpillar.cpp
jetson-inference/CUDA-PointPillars/tool/: livox_live.cpp  livox_live_mid360.cpp  livox_live_mid70.cpp  livox_test.cpp
jetson-inference/CUDA-PointPillars/tool/cfgs/: jetson-inference.code-workspace
